# editor-demo

./: .gitignore  .gitmodules  ARCHITECTURE.md  BUILD_LINUX.md  BUILD_MACOS.md  CMakeLists.txt  CONTRIBUTING.md  Entä jos suunnittelisi vscodemaisen teks.ini  FILE_TREE_IMPLEMENTATION.md  LICENSE  PHASE1_COMPLETE.md  PHASE1_EXTENDED.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_PROGRESS.md  PHASE8_COMPLETE.md  README.md  ROADMAP.md  SESSION_SUMMARY_PHASE4.md  WORKSPACE_MANAGEMENT.md  clang_tidy_output.txt  cppcheck_output.txt  test_file.txt  test_lsp.cpp  test_syntax.cpp
.github/workflows/: build.yml
.velocity/: workspace.vel
include/: autocomplete.h  build_error_parser.h  build_system.h  code_folding.h  editor_core.h  file_tree.h  find_dialog.h  gap_buffer.h  git_integration.h  gpu_renderer.h  indexer.h  lsp_client.h  minimap.h  piece_table.h  platform_file.h  platform_process.h  platform_types.h  platform_window.h  plugin_api.h  plugin_manager.h  refactor_api.h  rope_table.h  syntax_highlighter.h  tab_manager.h  terminal.h  test_framework.h  theme.h  treesitter_bridge.h  undo_manager.h  viewport.h  wasm_runtime.h  workspace.h
plugins/hello-world/: README.md  build.bat  hello.c  hello.wasm
src/: build_error_parser.cpp  build_error_parser_test.cpp  build_error_workflow_demo.cpp  build_system.cpp  build_system_test.cpp  editor_benchmark.cpp  editor_benchmark_profile.cpp  editor_core.cpp  editor_test.cpp  find_dialog.cpp  gap_buffer.cpp  git_integration.cpp  gpu_renderer.cpp  gpu_renderer_test.cpp  gui_main.cpp  indexer.cpp  lsp_client.cpp  main.cpp  piece_table.cpp  piece_table_catch2_test.cpp  piece_table_large_file_test.cpp  piece_table_test.cpp  platform_file.cpp  platform_process.cpp  platform_test.cpp  platform_types.cpp  platform_window_cocoa.mm  platform_window_gtk.cpp  platform_window_win32.cpp  plugin_api_test.cpp  plugin_manager.cpp  plugin_test.cpp  refactor_api.cpp  refactor_api_test.cpp  rope_table.cpp  rope_table_test.cpp  syntax_highlighter.cpp  terminal.cpp  test_main.cpp  theme.cpp  (+4 more)
tests/: all_tests.cpp  editor_core_test.cpp  piece_table_catch2_test.cpp  syntax_highlighter_test.cpp
